fixed: short text row in info-text on mobile

--- a/css/home.scss
+++ b/css/home.scss
@@ -40,6 +40,7 @@ h1 {
 
   @include mobile {
     text-align: center;
+    padding: 10px 10px 40px 10px;
   }
 }
 
